# crawler

./: pyproject.toml
crawler/: ml_browser.py  selenium_hello_world.py
crawler/browser/: generic_crawler.py
crawler/browser/actions/: browser_actions.py
crawler/browser/crawler/: default_crawler.py
crawler/providers/: browser_provider.py
